Update introspective to 0.11