@@ -58,7 +58,7 @@
         <dependency>
             <groupId>net.intelie.introspective</groupId>
             <artifactId>introspective</artifactId>
-            <version>0.10</version>
+            <version>0.11</version>
             <scope>test</scope>
         </dependency>
 
@@ -169,6 +169,26 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>add-opens</id>
+            <activation>
+                <jdk>(1.8,)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.0.0-M5</version>
+                        <configuration>
+                            <useSystemClassLoader>false</useSystemClassLoader>
+                            <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
         <profile>
             <id>release</id>
 
